# pipecat-cloud-images

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  versions.yaml
.github/workflows/: docker-publish.yml
base/: Dockerfile  README.md  app.py  requirements.txt  waiting_server.py
local-test/: .gitignore  README.md  env.example  mock_pipecat_cloud.py  whatsapp_request_handler.py
pipecat-base/: CHANGELOG.md  Dockerfile  README.md  app.py  feature_manager.py  pcc_observers.py  pipecatcloud_system.py  pyproject.toml  requirements.txt  shared_state.py  waiting_server.py
pipecat-starters/: CHANGELOG.md  README.md
pipecat-starters/exotel/: README.md  bot.py  requirements.txt
pipecat-starters/gemini_multimodal_live/: README.md  bot.py  requirements.txt
pipecat-starters/natural_conversation/: README.md  bot.py  requirements.txt
pipecat-starters/openai_realtime/: README.md  bot.py  requirements.txt
pipecat-starters/plivo/: README.md  bot.py  requirements.txt  server.py
pipecat-starters/pstn_sip/: README.md  bot.py  bot_complex_voicemail.py  requirements.txt
pipecat-starters/smallwebrtc/: Dockerfile  README.md  bot.py  requirements.txt
pipecat-starters/smallwebrtc/client/: .gitignore  env.example
pipecat-starters/smallwebrtc/client/src/: app.ts
pipecat-starters/telnyx/: README.md  bot.py  requirements.txt
pipecat-starters/twilio/: README.md  bot.py  requirements.txt
pipecat-starters/vision/: README.md  bot.py  requirements.txt
pipecat-starters/voice/: README.md  bot.py  requirements.txt
starters/: README.md
starters/gemini_multimodal_live/: README.md  bot.py  requirements.txt
starters/natural_conversation/: README.md  bot.py
starters/openai_realtime/: README.md  bot.py
starters/twilio/: README.md  bot.py
starters/vision/: README.md  bot.py
starters/voice/: bot.py
