[project]
name = "pipecat-base"
version = "0.1.17"
description = "Pipecat Cloud Base Image"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.6,<0.128.0",
    "loguru~=0.7.3",
    "pipecatcloud>=0.2.6",
    "pip>=26",
    "nltk>=3.9.3,<4",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
