[project]
name = "pipecat-base"
version = "0.1.19"
description = "Pipecat Cloud Base Image"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.6,<1",
    "loguru~=0.7.3",
    "pipecatcloud>=0.4.4",
    "pip>=26",
    "nltk>=3.9.4,<4",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
